# tme_analysis

./: .gitignore  Makefile  pca_mitigation_report.md  pyproject.toml
.agents/rules/: code-style-guide.md
.antigravity/: agent.json
article/: main.typ  references.bib  supplementary.typ
jupyter/: analysis.ipynb  celltyping-example.ipynb  deconv.ipynb  single_cell_data.ipynb  test.ipynb
scratch/: check_cancer_type.py  check_rosenberg.py  check_tmb.py  compare_analytical.py  debug_rosenberg_tmb.py  inspect_pc2.py  print_cbioportal_clin.py  print_iatlas_obs.py  print_iatlas_response.py  test_pyensembl.py  test_step5.py
scripts/: TCGA-background.py  check_iatlas_raw.py  check_tcga_raw.py  compare-cohort-deconv-distributions.py  firth_logistic_regression_comparison.py  hsic_independence_demonstration.py  iAtlas-TCGA-correlation.py  iAtlas-TCGA-kmeans.py  iAtlas-TMB.py  iAtlas-VAF-exploration.py  iAtlas-bagaev-constrained-prediction.py  iAtlas-deconvolution.py  iAtlas-immuno-compass-signatures.py  iAtlas-mutations.py  iAtlas-predict-response-advanced.py  iAtlas-predict-response-deconv.py  iAtlas-predict-response-mutations.py  iAtlas-predict-response-vaf-tmb.py  iAtlas-self-ref-correlation.py  iAtlas-single-cell-exploration.py  iAtlas-vaf-tmb-reliability.py  iAtlas-vaf-tmb-statistics.py  iAtlas-vaf-tmb-threshold-optimization.py  illustrate-spearman-vs-pearson.py  inspect-single-cell.py  inspect_lengths.py  inspect_pc1.py  investigate-cohort-clustering.py  kmeans_selective_inferenece_analytically_and_simulation.py  lm22_no_ig_logistic_lrt_response.py  outlier_filtered_deconv_response_analysis.py  project_iatlas_pca.py  rerun-linear-deconv-pipeline.py  run_tcga_autoencoder.py  test_backed_ref.py  test_compute_ref.py  test_compute_ref_memory.py  test_load_ref.py  test_unlog_iatlas.py  visualize_hsic_dependency.py
scripts/causal_inference/: iAtlas-DRO.py  iAtlas-IRM.py
scripts/selective_inference/: gmm_mcmc_inference.py  gmm_selective_inference_simulation.py  kmeans_inference.py  kmeans_selective_inference_simulation.py  kmeans_selective_inferenece_analytically_and_simulation.py  simulation_gmm_selective_test.py  simulation_kmeans_selective_test.py  tcga_gmm_selective_test.py  tcga_kmeans_selective_test.py
scripts/selective_inference/markdown/: test_difference_in_means.md
scripts/tcga_autoencoder/: main.py  model.py  plot.py  train.py
scripts/tcga_background/: 01_harmonize.py  02_dim_reduction.py  03_clustering.py  04_distance_analysis.py
scripts/tgm6/: iAtlas-tgm6-expression.py  iAtlas-tgm6-melanoma.py
src/datasets/: __init__.py
