[project]
name = "tme_analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "datalair",
    "gibbscellprism",
    "icir",
    "instaprism",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "gtfparse",
    "pyensembl",
    "seaborn>=0.13.2",
    "singlecellrnasignature",
    "tcga",
    "scipy-stubs~=1.17.1",
    "infercnvpy>=0.6.1",
    "leidenalg>=0.11.0",
    "genentech-datasets",
    "gene_utils",
    "single_cell_datasets",
    "ici_datasets",
    "references",
    "ml_pipelines",
    "tables>=3.11.1",
    "optuna>=4.8.0",
    "gseapy>=1.2.1",
    "celltypist>=1.7.1",
    "cbio-py>=0.1.4",
    "setuptools<70",
    "torch>=2.12.1",
    "scanpy>=1.12.1",
    "anndata>=0.12.17",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
icir = { git = "https://github.com/LuJoHae/ICI-Response.git" }
tcga = { git = "https://github.com/LuJoHae/TCGA.git" }
gibbscellprism = { git = "https://github.com/LuJoHae/GibbsCellPrism.git" }
datalair = { git = "https://github.com/LuJoHae/datalair.git" }
singlecellrnasignature = { git = "https://github.com/LuJoHae/SingleCellRNASignature.git" }
gtfparse = { git = "https://github.com/LuJoHae/gtfparse.git" }
pyensembl = { git = "https://github.com/LuJoHae/pyensembl.git"}
instaprism = { workspace = true }
genentech-datasets = { workspace = true }
single_cell_datasets = { workspace = true }
references = { workspace = true }
gene_utils = { workspace = true }
ici_datasets = { workspace = true }
ml_pipelines = { workspace = true }
